Fixed sticky top issue and hopefully fixed overflow x issue

--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-html {
+header {
     overflow-x: hidden;
 }
 
